[package]
name = "srpc-macro"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = [ "full" ] }
quote = "1"
heck = "0.4.0"
proc-macro-error = "1"

[lib]
proc-macro = true
