[package]
name = "srpc"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sia = { path = "../../sia/sia" }
sia = "0.0.4"
srpc-macro = { path = "../srpc-macro", version = "0.0.1" }
log = "0.4"
serde_repr = "0.1"
async-lock = "2.4.0"
serde = { version = "1", features = [ "derive" ] }
