[package]
name = "srpc"
version = "0.1.4"
edition = "2021"

repository = "https://github.com/znx3p0/srpc"
keywords = [ "rpc", "async", "network", "microservices", "api" ]
description = "simple and extremely performant RPC server built on top of Canary"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# canary = { path = "../../canary/canary" }
compact_str = "0.2"
canary = "0.1.3"
srpc-macro = { path = "../srpc-macro", version = "0.1.4" }
log = "0.4"
serde_repr = "0.1"
async-lock = "2.4.0"
serde = { version = "1", features = [ "derive" ] }
